# rq-vae-explorer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROMPT.md  README.md  pyproject.toml
.agent/: scratchpad.md  summary.md
.ralph/: current-events  events-20260122-203831.jsonl  events.jsonl
docs/plans/: 2026-01-21-rq-vae-explorer-design.md  2026-01-21-rq-vae-explorer-implementation.md  2026-01-22-plot2-visualization-modes-design.md  2026-01-27-wasserstein-loss-implementation.md  2026-01-27-wasserstein-rq-vae-design.md  2026-01-28-codebook-trajectory-debug.md
scripts/: run.py
src/rq_vae_explorer/: __init__.py
src/rq_vae_explorer/data/: __init__.py  mnist.py
src/rq_vae_explorer/model/: __init__.py  decoder.py  encoder.py  quantizer.py  rqvae.py
src/rq_vae_explorer/training/: __init__.py  losses.py  mlflow_tracker.py  state.py  trainer.py
src/rq_vae_explorer/ui/: __init__.py  api.py  app.py  controls.py  plots.py
tests/: test_controls.py  test_data.py  test_decoder.py  test_encoder.py  test_integration.py  test_losses.py  test_mlflow_tracker.py  test_plots.py  test_quantizer.py  test_rqvae.py  test_state.py  test_trainer.py
ui-rust/: Cargo.toml
ui-rust/src/: main.rs
