[package]
name = "rq-vae-explorer-ui"
version = "0.1.0"
edition = "2021"
description = "Rust native UI for RQ-VAE Explorer"

[dependencies]
eframe = { version = "0.29", features = ["default_fonts"] }
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
